k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosaic
  labels:
    app: mosaic
spec:
  selector:
    app: mosaic
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
